# serenecode

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURE_SPEC.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SERENECODE.md  SPEC.md  pyproject.toml
docs/: SECURITY.md  VERIFICATION_LEVELS.md
examples/: DOSAGE_CALC_SPEC.md
examples/dosage-regular/: dosage_calc.py  test_dosage_calc.py
examples/dosage-serenecode/: CLAUDE.md  SERENECODE.md  SPEC.md  pyproject.toml
examples/dosage-serenecode/src/: __init__.py
examples/dosage-serenecode/src/core/: __init__.py  dosage.py  models.py
examples/dosage-serenecode/src/dosage/: __init__.py
examples/dosage-serenecode/src/dosage/core/: __init__.py  dosage.py  models.py  safety.py
examples/dosage-serenecode/tests/: __init__.py  conftest.py  test_dosage.py  test_models.py
examples/dosage-serenecode/tests/unit/: test_dosage.py  test_models.py  test_safety.py
specs/: DOSAGE_CALC_SPEC.md  SERENECODE.md  SERENECODE_SPEC.md
src/serenecode/: __init__.py  cli.py  cli_helpers.py  config.py  init.py  models.py  reporter.py  source_discovery.py
src/serenecode/adapters/: __init__.py  coverage_adapter.py  coverage_suggestions.py  crosshair_adapter.py  hypothesis_adapter.py  hypothesis_strategies.py  local_fs.py  module_loader.py  mypy_adapter.py  unavailable_dead_code_adapter.py  vulture_adapter.py
src/serenecode/checker/: __init__.py  compositional.py  compositional_integration.py  compositional_parsing.py  coverage.py  properties.py  spec_traceability.py  structural.py  structural_helpers.py  structural_quality.py  symbolic.py  types.py
src/serenecode/contracts/: __init__.py  predicates.py
src/serenecode/core/: __init__.py  exceptions.py  module_health.py  pipeline.py  pipeline_helpers.py
src/serenecode/mcp/: __init__.py  resources.py  schemas.py  server.py  tools.py  tools_spec.py
src/serenecode/ports/: __init__.py  coverage_analyzer.py  dead_code_analyzer.py  file_system.py  property_tester.py  symbolic_checker.py  type_checker.py
src/serenecode/support/: crosshair_parsing.py  hypothesis_refinement.py
src/serenecode/templates/: __init__.py  content.py
tests/: conftest.py
tests/e2e/: test_check_command.py  test_cli.py  test_cli_branches.py  test_init.py  test_init_command.py  test_mcp_command.py  test_report_command.py  test_status_command.py
tests/fixtures/edge_cases/: aliased_import.py  async_functions.py  empty_module.py  from_import.py
tests/fixtures/invalid/: broken_postcondition.py  io_in_core.py  missing_contracts.py  missing_invariant.py  missing_types.py
tests/fixtures/valid/: class_with_invariant.py  full_module.py  simple_function.py
tests/integration/: test_adapter_internals.py  test_checkers_real_code.py  test_coverage_adapter.py  test_coverage_suggestions.py  test_crosshair_adapter.py  test_crosshair_adapter_helpers.py  test_crosshair_parsing.py  test_example_projects.py  test_file_adapter.py  test_hypothesis_adapter.py  test_hypothesis_adapter_helpers.py  test_hypothesis_refinement.py  test_hypothesis_strategies.py  test_local_fs.py  test_module_loader.py  test_mypy_adapter.py  test_resources.py  test_schemas.py  test_server.py  test_tools.py  test_tools_spec.py  test_unavailable_dead_code_adapter.py  test_vulture_adapter.py
tests/unit/: test_api.py  test_cli_helpers.py  test_config.py  test_models.py  test_models_hypothesis.py  test_pipeline.py  test_pipeline_helpers.py  test_reporter.py  test_source_discovery.py  test_templates_content.py
tests/unit/checker/: test_compositional.py  test_compositional_helpers.py  test_compositional_integration.py  test_compositional_parsing.py  test_coverage.py  test_module_health.py  test_properties.py  test_spec_traceability.py  test_structural.py  test_structural_helpers.py  test_structural_hypothesis.py  test_structural_quality.py  test_symbolic.py  test_types.py
tests/unit/contracts/: test_predicates.py  test_predicates_hypothesis.py
tests/unit/mcp/: test_tool_module_health.py
