[project]
name = "serenecode"
version = "0.1.1"
description = "Verification framework for AI-generated Python — test coverage, property testing, and symbolic execution"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "helgster77" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "icontract>=2.7.0",
    "click>=8.0",
    "coverage>=7.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
    "crosshair-tool>=0.0.60",
]

[project.urls]
Homepage = "https://github.com/helgster77/serenecode"
Repository = "https://github.com/helgster77/serenecode"
Issues = "https://github.com/helgster77/serenecode/issues"

[project.optional-dependencies]
verify = [
    "coverage>=7.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
    "crosshair-tool>=0.0.60",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "hypothesis>=6.0",
    "crosshair-tool>=0.0.60",
]

[project.scripts]
serenecode = "serenecode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/serenecode"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["serenecode"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/e2e", "tests/integration"]
markers = [
    "slow: marks tests as slow",
    "crosshair: tests that import CrossHair (monkey-patches icontract)",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["serenecode"]
branch = true
omit = [
    "src/serenecode/templates/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]

[dependency-groups]
dev = [
    "build>=1.4.2",
    "twine>=6.2.0",
]
