[project]
name = "dosage-serenecode"
version = "0.1.0"
description = "Medical dosage calculator example for serenecode"
requires-python = ">=3.10"
dependencies = [
    "icontract>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
